Connection with remote broker working.

--- a/src/main/popupName.fxml
+++ b/src/main/popupName.fxml
@@ -9,8 +9,8 @@
 <Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="472.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="main.ReadDataController">
    <children>
       <Button fx:id="confirmButton" layoutX="158.0" layoutY="375.0" mnemonicParsing="false" onAction="#onConfirmButton" prefHeight="44.0" prefWidth="87.0" text="Aceitar" />
-      <TextField fx:id="remoteMachineAddressField" layoutX="62.0" layoutY="37.0" prefHeight="32.0" prefWidth="279.0" />
-      <Text layoutX="123.0" layoutY="27.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Endereço da máquina remota" />
+      <TextField fx:id="brokerAddressField" layoutX="62.0" layoutY="37.0" prefHeight="32.0" prefWidth="279.0" />
+      <Text layoutX="62.0" layoutY="27.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Endereço do broker (vazio para localhost)" textAlignment="CENTER" wrappingWidth="279.0" />
       <ListView fx:id="topicListView" layoutX="62.0" layoutY="108.0" prefHeight="217.0" prefWidth="279.0" />
       <Text layoutX="129.0" layoutY="97.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Lista de tópicos disponíveis" />
       <Button layoutX="170.0" layoutY="330.0" mnemonicParsing="false" onAction="#onRefreshButton" text="Atualizar" />
